objects/NumberingMaster__c.object
<CustomObject>
    <fields>
        <fullName>CurrentNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>採番番号</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digit__c</fullName>
        <label>桁数</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>タイプ</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>採番マスタ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Prefix__c</columns>
        <columns>Suffix__c</columns>
        <columns>Type__c</columns>
        <columns>CurrentNumber__c</columns>
        <columns>Digit__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>QUO_FY</fullName>
        <columns>NAME</columns>
        <columns>Prefix__c</columns>
        <columns>Digit__c</columns>
        <columns>CurrentNumber__c</columns>
        <columns>Suffix__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Prefix__c</field>
            <operation>contains</operation>
            <value>18</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>QuoteNoMaster</value>
        </filters>
        <label>見積もり№(年度指定)</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>採番マスタ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>